[package]
name = "save-op1"
version = "0.4.0"
authors = ["chee <chee@snoot.club>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enquirer = "0.3.0"
dialoguer = "0.5.0"
ears = "0.8.0"
slug = "0.1.4"
taglib = "1.0.0"
pbr = "1.0.2"
tee_readwrite = "0.1.0"
